--- a/src/app/components/modal-carrito/modal-carrito.component.html
+++ b/src/app/components/modal-carrito/modal-carrito.component.html
@@ -84,7 +84,7 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           Seguir comprando
         </button>
-        <button type="button" class="btn btn-primary btn-lg" (click)="procederACompra()">
+        <button type="button" class="btn btn-primary" (click)="procederACompra()">
           <i class="fas fa-credit-card me-2"></i>
           Proceder a compra
         </button>
