--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,5 +1,5 @@
 .card-header {
-  height: 60px; /* Altura fija */
+  height: 60px; 
   display: flex;
   align-items: center;
   overflow: hidden;
@@ -7,7 +7,6 @@
 
 .card-header h6 {
   margin: 0;
-  /* Para texto en una sola línea con puntos suspensivos */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
