--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .content-container {
-  padding-top: 70px; /* Ajusta según la altura de tu navbar */
+  padding-top: 70px; 
 }
 
 .toast-notification {
