--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,30 +1,30 @@
 <div class="card mb-3 h-100 d-flex flex-column" *ngIf="!producto.oculto">
+    <!-- Mostrar tarjeta  -->
     <h6 class="card-header">{{ producto.nombre }}</h6>
     <div class="image-container">
-        <img 
-          [src]="producto.imagen || 'assets/images/placeholder-producto.jpg'"
-          [alt]="producto.nombre"
-          class="card-img-top product-image"
-          width="100%" 
-          height="200"
-          style="object-fit: contain;">
+        <img [src]="producto.imagen || 'assets/images/placeholder-producto.jpg'" [alt]="producto.nombre"
+            class="card-img-top product-image" width="100%" height="200" style="object-fit: contain;">
     </div>
-    <svg *ngIf="!producto.imagen" xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200"
-        aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice"
-        viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+    <!-- SVG de placeholder solo si no hay imagen disponible -->
+    <svg *ngIf="!producto.imagen" xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%"
+        height="200" aria-label="Placeholder: Image cap" focusable="false" role="img"
+        preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
         <rect width="100%" height="100%" fill="#868e96"></rect>
         <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Sin imagen</text>
     </svg>
     <div class="card-body d-flex flex-column">
-        <!-- Descripción con altura fija de 80px -->
+        <!-- Descripción -->
         <p class="card-text" style="height: 70px; overflow: hidden;">{{ producto.descripcion }}</p>
         <div class="d-flex justify-content-between align-items-center mt-auto">
             <strong class="text-primary">{{ getPrecioActual() | conversor}}</strong>
+            <!-- Mostrar badge de descuento -->
             <span *ngIf="producto.descuento" class="badge bg-danger">-{{ producto.descuento }}%</span>
         </div>
     </div>
     <div class="card-footer d-flex justify-content-between">
-        <button type="button" class="btn btn-outline-primary btn-sm " (click)="onAgregarAlCarrito()">Agregar al Carro</button>
-        <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalCompra" (click)="onMostrar()">Comprar</button>
+        <button type="button" class="btn btn-outline-primary btn-sm " (click)="onAgregarAlCarrito()">Agregar al
+            Carro</button>
+        <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modalCompra"
+            (click)="onMostrar()">Comprar</button>
     </div>
 </div>
