--- a/src/app/components/destacados/destacados.component.css
+++ b/src/app/components/destacados/destacados.component.css
@@ -15,7 +15,7 @@
 }
 
 .carousel-indicators button.active {
-  background-color: #0d6efd;
+  background-color: #29355fcb;
 }
 
 .carousel-control-prev,
