--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -115,3 +115,23 @@
 .currency-item:hover .check-icon {
   transform: scale(1.1);
 }
+
+.modal-backdrop {
+    z-index: 1040 !important;
+}
+
+.modal {
+    z-index: 1050 !important;
+}
+.modal-backdrop.show {
+  opacity: 0.5 !important;
+}
+
+.modal.show {
+  z-index: 1050 !important;
+  opacity: 1 !important;
+}
+
+body.modal-open {
+  overflow: hidden;
+}
